バージョンを0.1.0に変更

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "amaterasu"
-version = "0.0.0"
-description = "A Tauri App"
+version = "0.1.0"
+description = "IIDX key counter app"
 authors = ["you"]
 edition = "2021"
 
