--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "amaterasu"
-version = "0.0.0"
-description = "A Tauri App"
+version = "0.1.0"
+description = "IIDX key counter app"
 authors = ["you"]
 edition = "2021"
 
@@ -14,6 +14,13 @@ tauri-build = { version = "1", features = [] }
 tauri = { version = "1", features = ["shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+
+[dependencies.windows]
+version = "0.52"
+features = [
+    "Foundation_Collections",
+    "Gaming_Input",
+]
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
